Adding go-mode and fixing work day as 8 hours

--- a/emacs-init.org
+++ b/emacs-init.org
@@ -84,8 +84,9 @@
        (interactive)
        (setq url-proxy-services
              '(("no_proxy" . "^\\(localhost\\|10.*\\)")
-               ("http" . "proxy-us.intel.com:911")
-               ("https" . "proxy-us.intel.com:911"))))
+               ;;("http" . "proxy-us.intel.com:911")
+               ;;("https" . "proxy-us.intel.com:911")
+               )))
 
      (defun shlomi/intel-proxy-disable ()
        (interactive)
@@ -581,6 +582,34 @@
    I would use this, but my god! This imports a gazillion packages!! removed!
    #+END_warning
 
+* Go
+  Lets add some go support.
+  #+BEGIN_SRC emacs-lisp :exports code :results silent
+    (use-package go-mode
+      :ensure t)
+  #+END_SRC
+
+* YAML
+  Lots of configuations are now days defined as yaml. Lets use that.
+  #+BEGIN_SRC emacs-lisp :exports code :results silent
+    (use-package yaml-mode
+      :ensure t)
+  #+END_SRC
+* Setup ctags
+  Start bt getting ctags:
+  #+BEGIN_SRC shell :exports code :results silent
+  sudo apt-get install exuberant-ctags
+  #+END_SRC
+
+  Then, lets set it up:
+  #+BEGIN_SRC emacs-lisp :exports code :results silent
+  (setq path-to-ctags "/usr/bin/ctags") 
+  (defun create-tags (dir-name)
+    "Create tags file."
+    (interactive "DDirectory: ")
+    (shell-command
+     (format "%s -f TAGS -e -R %s" path-to-ctags (directory-file-name dir-name))))
+  #+END_SRC
 * Conveniences
   Once you are used to some way of working, changing the habits is
   quite hard and not always truely justified. In this section I will
@@ -894,6 +923,26 @@
              ("\C-ca"   . org-agenda)
              ("\C-cb"   . org-iswitchb)))
   #+END_SRC
+
+** Clock
+   Org-mode supplies a wonderful mechanism to keep track of time. It
+   can generate reports out of the tracked time as well.
+
+   When it makes a report, all the times are summed up and showen as
+   days, hours, minutes. However, instead of calculating days as 24
+   hours period, lets treat a day as a 'work day', so a day is 8
+   hours.  In previous versions of org-mode I actually had to changfe
+   code to achieve this, but now there is an easy customization for it!
+
+   #+BEGIN_SRC emacs-lisp :exports code :results silent
+     (setq org-duration-units `(("min" . 1)
+                                ("h" . 60)
+                                ("d" . ,(* 60 8))
+                                ("w" . ,(* 60 8 5))
+                                ("m" . ,(* 60 8 5 4))
+                                ("y" . ,(* 60 8 5 4 10))))
+     (org-duration-set-regexps)
+   #+END_SRC
 
 ** Babel
    Babel is a tool that allows you to execute code in any language inside an =org= file, in fact,
