--- a/emacs-init.org
+++ b/emacs-init.org
@@ -957,7 +957,7 @@
                  (browse-kill-ring-default-keybindings)))
    #+END_SRC
 
-* Org-mode
+* COMMENT Org-mode
   Lets set up org-mode!
 
   #+BEGIN_SRC emacs-lisp :exports code :results silent
@@ -975,7 +975,7 @@
                         ("DONE" . (:foreground "DarkSeaGreen"  :weight bold))))
 
                 (setq org-log-done 'time)
-                
+
                 ;; Lets make a day be 8 hours of work, a week be 5 days of work
                 (setq org-duration-units `(("min" . 1)
                                     ("h" . 60)
@@ -983,6 +983,15 @@
                                     ("w" . ,(* 60 8 5))
                                     ("m" . ,(* 60 8 5 4))
                                     ("y" . ,(* 60 8 5 4 10))))
+
+                (setq org-agenda-clock-consistency-checks
+                      '(:max-duration "10:00" :min-duration 0 :max-gap "0:05" :gap-ok-around
+                                      ("4:00" "19:00")
+                                      :default-face
+                                      ((:background "DarkRed")
+                                       (:foreground "white"))
+                                      :overlap-face nil :gap-face nil :no-end-time-face nil :long-face nil :short-face nil))
+
                 (org-duration-set-regexps))
       :bind (("C-c a"   . org-agenda)
              ("C-x C-n" . org-capture)
@@ -1026,21 +1035,21 @@
     #+BEGIN_SRC emacs-lisp :exports code :results silent
       (defun sanitize (s)
         (replace-regexp-in-string
-         "[\\\.\/']+" ""
+         "[^[:alnum:]]+" ""
          (replace-regexp-in-string "\s+" "-" s)))
 
-      (defun org-id-new (&optional prefix)
+      (defun eos/org-id-new (&optional prefix)
         "Create a new globally unique ID.
 
-      An ID consists of two parts separated by a colon:
-      - a prefix
-      - a unique part that will be created according to `org-id-method'.
+          An ID consists of two parts separated by a colon:
+          - a prefix
+          - a unique part that will be created according to `org-id-method'.
 
-     P REFIX can specify the prefix, the default is given by the variable
-      `org-id-prefix'.  However, if PREFIX is the symbol `none', don't use any
-      prefix even if `org-id-prefix' specifies one.
+         P REFIX can specify the prefix, the default is given by the variable
+          `org-id-prefix'.  However, if PREFIX is the symbol `none', don't use any
+          prefix even if `org-id-prefix' specifies one.
 
-      So a typical ID could look like \"Org-4nd91V40HI\"."
+          So a typical ID could look like \"Org-4nd91V40HI\"."
         (let* ((prefix (if (eq prefix 'none)
                            ""
                          (concat (or prefix org-id-prefix) "-")))
@@ -1065,15 +1074,13 @@
            (t (error "Invalid `org-id-method'")))
           (concat prefix unique)))
 
-
-
       (defun eos/org-custom-id-get (&optional pom create prefix)
         "Get the CUSTOM_ID property of the entry at point-or-marker POM.
-         If POM is nil, refer to the entry at point. If the entry does
-         not have an CUSTOM_ID, the function returns nil. However, when
-         CREATE is non nil, create a CUSTOM_ID if none is present
-         already. PREFIX will be passed through to `org-id-new'. In any
-         case, the CUSTOM_ID of the entry is returned."
+             If POM is nil, refer to the entry at point. If the entry does
+             not have an CUSTOM_ID, the function returns nil. However, when
+             CREATE is non nil, create a CUSTOM_ID if none is present
+             already. PREFIX will be passed through to `org-id-new'. In any
+             case, the CUSTOM_ID of the entry is returned."
         (interactive)
         (org-with-point-at pom
           (let ((id (org-entry-get nil "CUSTOM_ID")))
@@ -1081,7 +1088,7 @@
              ((and id (stringp id) (string-match "\\S-" id))
               id)
              (create
-              (setq id (org-id-new (concat prefix "h")))
+              (setq id (eos/org-id-new (concat prefix "h")))
               (org-entry-put pom "CUSTOM_ID" id)
               (org-id-add-location id (buffer-file-name (buffer-base-buffer)))
               id)))))
@@ -1089,9 +1096,9 @@
 
       (defun eos/org-add-ids-to-headlines-in-file ()
         "Add CUSTOM_ID properties to all headlines in the current
-         file which do not already have one. Only adds ids if the
-         `auto-id' option is set to `t' in the file somewhere. ie,
-         ,#+OPTIONS: auto-id:t"
+             file which do not already have one. Only adds ids if the
+             `auto-id' option is set to `t' in the file somewhere. ie,
+             ,#+OPTIONS: auto-id:t"
         (interactive)
         (save-excursion
           (widen)
@@ -1104,7 +1111,7 @@
     #+BEGIN_SRC emacs-lisp :exports code :results silent
       (require 'org-id)
       (setq org-id-prefix "Org")
-      
+
       (setq org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
       (add-hook 'org-capture-prepare-finalize-hook
                 (lambda () (eos/org-custom-id-get (point) 'create))) 
