--- a/emacs-init.org
+++ b/emacs-init.org
@@ -1243,15 +1243,30 @@
 
 ** Custom block shortcuts
    #+BEGIN_SRC emacs-lisp :exports code :results silent
-     (add-to-list 'org-structure-template-alist '("elr" "#+BEGIN_SRC emacs-lisp :exports results\n?\n#+END_SRC" "<src lang=\"?\">\n\n</src>"))
-     (add-to-list 'org-structure-template-alist '("elc" "#+BEGIN_SRC emacs-lisp :exports code :results silent\n?\n#+END_SRC" "<src lang=\"?\">\n\n</src>"))
-     (add-to-list 'org-structure-template-alist '("clj" "#+BEGIN_SRC clojure ?\n\n#+END_SRC" "<src lang=\"?\">\n\n</src>"))
-     (add-to-list 'org-structure-template-alist '("cljc" "#+BEGIN_SRC clojure :exports code :results silent\n?\n#+END_SRC" "<src lang=\"?\">\n\n</src>"))
-     (add-to-list 'org-structure-template-alist '("shc" "#+BEGIN_SRC shell :exports code :results silent\n?\n#+END_SRC" "<src lang=\"?\">\n\n</src>"))
-     (add-to-list 'org-structure-template-alist '("t" "#+BEGIN_TIP\n?\n#+END_TIP" "<div class=\"tip\">\n\n</div>"))
-     (add-to-list 'org-structure-template-alist '("w" "#+BEGIN_warning\n?\n#+END_warning" "<div class=\"warning\">\n\n</div>"))
-     (add-to-list 'org-structure-template-alist '("n" "#+BEGIN_note\n?\n#+END_note" "<div class=\"note\">\n\n</div>"))
-     (add-to-list 'org-structure-template-alist '("f" "#+BEGIN_info\n?\n#+END_info" "<div class=\"info\">\n\n</div>"))
+     (require 'org-tempo)
+     (tempo-define-template "elr" ; just some name for the template
+           '("#+begin_src emacs-lisp :exports results" n> p > n> "#+end_src")
+           "<elr"
+           "Insert emacs-lisp with results" ; documentation
+           'org-tempo-tags)
+
+     (tempo-define-template
+      "elc"
+      '("#+begin_src emacs-lisp :exports code :results silent" n> p > n> "#+end_src")
+      "<elc"
+      "Insert emacs lisp with no results that exports code")
+
+     (tempo-define-template "elr"  '( "#+begin_src emacs-lisp :exports results" n> p > n> "#+end_src") "<elr" "" 'org-tempo-tags)
+     (tempo-define-template "elc"  '( "#+begin_src emacs-lisp :exports code :results silent" n> p > n> "#+end_src") "<elc" "" 'org-tempo-tags)
+     (tempo-define-template "clj"  '( "#+begin_src clojure" n> p > n> "#+end_src") "<clj" "" 'org-tempo-tags)
+     (tempo-define-template "cljc" '( "#+begin_src clojure :exports code :results silent" n> p > n> "#+end_src") "<cljc" "" 'org-tempo-tags)
+     (tempo-define-template "shc"  '( "#+begin_src shell :exports code :results silent" n> p > n> "#+end_src") "<shc" "" 'org-tempo-tags)
+     (tempo-define-template "sh"   '( "#+begin_src shell" n> p > n> "#+end_src") "<sh" "" 'org-tempo-tags)
+     (tempo-define-template "sho"  '( "#+begin_src shell :results output" n> p > n> "#+end_src") "<sho" "" 'org-tempo-tags)
+     (tempo-define-template "t"    '( "#+begin_tip" n> p > n> "#+end_tip") "<t" "" 'org-tempo-tags)
+     (tempo-define-template "w"    '( "#+begin_warning" n> p > n> "#+end_warning") "<w" "" 'org-tempo-tags)
+     (tempo-define-template "n"    '( "#+begin_note" n> p > n> "#+end_note") "<n" "" 'org-tempo-tags)
+     (tempo-define-template "f"    '( "#+begin_info" n> p > n> "#+end_info") "<f" "" 'org-tempo-tags)
    #+END_SRC
 ** Fix transpose-elements                                            :Advice:
    =org-transpose-elements= fails when invoked on plain words, I'd like it to simply invoke
